# JSON-DOC

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml  run_validation_tests.py  validate_json_schema.py
.github/workflows/: build.yaml  preview.yml  publish.yaml  test.yaml
.husky/: pre-commit
.husky/_/: husky.sh
docs/: 2025-05-21-json-doc-ts-prompt.md  2025-05-22-claude-code-ts-renderer-implementation-report.md  2025-05-22-ts-renderer-prompt.md  2025-06-05-component-override-example.md  children-blocks.md  conversion.md  differences-from-notion.md  html-conversion.md  json-doc-spec.md  notes-on-notion.md  notes-on-python-implementation.md  python-implementation.md  roadmap.md  typescript-implementation.md
examples/: html_all_elements.html  notion_example_page2.json  notion_example_page3.json  notion_fetch_page.py
examples/html/: html_all_elements.html  html_just_table.html  html_nested_elements.html  html_to_mermaid.py  test-doc.html
examples/markdown/: markdown_syntax_ex1.md
examples/notion/: notion_example_page1.json  notion_example_page3.json
examples/vite_basic/: package-lock.json  package.json  pnpm-lock.yaml
jsondoc/: extract_rich_text.py  rules.py  serialize.py  utils.py  validate.py
jsondoc/convert/: html.py  markdown.py  placeholder.py  utils.py
jsondoc/transcribe/: anthropic_.py  benchmark.py  fireworks.py  utils.py
jsondoc/utils/: block.py  text_with_backref.py
jsondoc/validate/: __init__.py
misc/: hash_demo.py  test_notion_api.py  test_notion_api2.py
python/: README.md  conftest.py  pyproject.toml
python/jsondoc/: rules.py
python/misc/: hash_demo.py  test_notion_api.py  test_notion_api2.py
python/scripts/: autogen_pydantic.py  utils.py
python/tests/: test_html_to_jsondoc.py  test_jsondoc_to_markdown.py  test_main.py  test_serialization.py  test_validation.py
schema/: shared_definitions.json
schema/block/: block_schema.json  ex1_success.json  ex2_fail.json
schema/file/: ex2_success.json  file_schema.json
schema/file_base/: ex1_success.json  file_base_schema.json
schema/page/: ex1_success.json  ex2_success.json  ex3_fail.json  ex4_fail.json  page_schema.json
schema/shared_definitions/: shared_definitions_schema.json
scripts/: autogen_pydantic.py  compile.py  utils.py
tests/: run_serialization_tests.py  run_validation_tests.py  test_html_to_jsondoc.py  test_jsondoc_to_markdown.py
tests/html_jsondoc_pairs/: ex04_basic_table.json  ex05_basic_br.json  ex07_basic_ol.json  ex1.json  test_a_basic.json  test_figure_image_with_caption.json  test_table_basic.json  test_table_with_caption.json
ts/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
ts/scripts/: generate-types.ts  (+1 more)
typescript/: .prettierignore  .prettierrc  CLAUDE.md  README.md  asdf.json  bump.config.ts  eslint.config.js  jest.config.js  package-lock.json  package.json  test-format.ts  tsconfig.json  tsup.config.ts  vite.dev.config.ts  vitest.config.mjs  vitest.config.ts
(+287 files in other folders)
