[project]
name = "python-jsondoc"
version = "0.1.0"
description = ""
authors = [{ name = "TextCortex Dev Team", email = "dev@textcortex.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "requests>=2.32.2,<3",
    "python-dotenv>=1.0.1,<2",
    "ipdb>=0.13.13,<0.14",
    "pillow>=10.3.0,<11",
    "pydantic>=2.7.2,<3",
    "thefuzz>=0.22.1,<0.23",
    "jsonschema>=4.23.0,<5",
    "bs4>=0.0.2,<0.0.3",
    "pypandoc~=1.13",
]

[project.scripts]
validate_jsondoc = "jsondoc.bin.validate_jsondoc:main"
convert_jsondoc = "jsondoc.bin.convert_jsondoc:main"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25.9,<0.26",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.hatch.build.targets.sdist]
include = ["jsondoc"]

[tool.hatch.build.targets.wheel]
include = ["jsondoc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
