[project]
name = "python-jsondoc"
version = "0.1.0"
description = ""
authors = [{ name = "TextCortex Dev Team", email = "dev@textcortex.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.7.2,<3",
    "jsonschema>=4.23.0,<5",
    "pypandoc>=1.15",
    "beautifulsoup4>=4.13.3",
    "typeid-python>=0.3.2",
]

[project.scripts]
validate_jsondoc = "jsondoc.bin.validate_jsondoc:main"
convert_jsondoc = "jsondoc.bin.convert_jsondoc:main"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25.9,<0.26",
    "ipdb>=0.13.13",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.10",
]

[tool.hatch.build.targets.sdist]
include = ["jsondoc"]

[tool.hatch.build.targets.wheel]
include = ["jsondoc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
